add routes to update and delete snippets updated openapi.yml specification
